common/force-app/main/default/objects/Application__c/fields/Solicitor_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Postal_Code__c</fullName>
    <label>Solicitor Postal Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>