common/force-app/main/default/objects/Application__c/fields/Solicitor_Postal_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Postal_Street_Address__c</fullName>
    <label>Solicitor Postal Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>