common/force-app/main/default/objects/Application__c/fields/Solicitor_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_State_Province__c</fullName>
    <label>Solicitor State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>