common/force-app/main/default/objects/Application__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>34</length>
    <type>Text</type>
</CustomField>