common/force-app/main/default/objects/Application__c/fields/TPA_End_date__c.field-meta.xml
<CustomField>
    <fullName>TPA_End_date__c</fullName>
    <label>TPA End date</label>
    <type>Date</type>
</CustomField>