common/force-app/main/default/objects/Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Experienced Investor - Property</fullName>
            </value>
            <value>
                <fullName>Experienced Investor - Startups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>