common/force-app/main/default/objects/Application__c/fields/X250K_Gross__c.field-meta.xml
<CustomField>
    <fullName>X250K_Gross__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$250K Gross Income</label>
    <type>Checkbox</type>
</CustomField>