common/force-app/main/default/objects/Application__c/fields/X2_5_Million_Net_Asset__c.field-meta.xml
<CustomField>
    <fullName>X2_5_Million_Net_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$2.5 Million Net Asset</label>
    <type>Checkbox</type>
</CustomField>