common/force-app/main/default/objects/Application__c/recordTypes/Controlling_Entity_Declaration_Application.recordType-meta.xml
<RecordType>
    <fullName>Controlling_Entity_Declaration_Application</fullName>
    <active>true</active>
    <label>Controlling Entity Declaration Application</label>
</RecordType>