common/force-app/main/default/objects/Application__c/recordTypes/EOI_Application.recordType-meta.xml
<RecordType>
    <fullName>EOI_Application</fullName>
    <active>true</active>
    <label>EOI Application</label>
</RecordType>