common/force-app/main/default/objects/Application__c/recordTypes/Experienced_Investor_Application_Form_Property.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Investor_Application_Form_Property</fullName>
    <active>true</active>
    <label>Experienced Investor Application Form (Property)</label>
</RecordType>