common/force-app/main/default/objects/Application__c/recordTypes/Experienced_Investor_Application_Form_StartUps.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Investor_Application_Form_StartUps</fullName>
    <active>true</active>
    <label>Experienced Investor Application Form (Start-Ups)</label>
</RecordType>