common/force-app/main/default/objects/Application__c/recordTypes/Referral_Application.recordType-meta.xml
<RecordType>
    <fullName>Referral_Application</fullName>
    <active>true</active>
    <label>Referral Application</label>
</RecordType>