common/force-app/main/default/objects/Application__c/recordTypes/Third_party_Authority.recordType-meta.xml
<RecordType>
    <fullName>Third_party_Authority</fullName>
    <active>true</active>
    <label>Third party Authority</label>
</RecordType>