common/force-app/main/default/objects/Application__c/recordTypes/Wholesale_application.recordType-meta.xml
<RecordType>
    <fullName>Wholesale_application</fullName>
    <active>true</active>
    <label>Wholesale Investor Application</label>
</RecordType>