common/force-app/main/default/objects/Application__c/validationRules/EIC.validationRule-meta.xml
<ValidationRule>
    <fullName>EIC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 RecordType.Name = &apos;Experienced Investor Application Form (Property)&apos;,
RecordType.Name = &apos;Experienced Investor Application Form (Start-Ups)&apos;),
  ISPICKVAL(Status__c, &apos;Application Approved&apos;) ,
  ISBLANK( Date_Validated__c  ))</errorConditionFormula>
    <errorMessage>Please make sure to fill the Date Validated/Approved field. Thank you</errorMessage>
</ValidationRule>