common/force-app/main/default/objects/Application__c/listViews/Applications_By_Record_Type.listView-meta.xml
<ListView>
    <fullName>Applications_By_Record_Type</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.EOI_Application</value>
    </filters>
    <label>Applications By Record Type</label>
</ListView>